WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35475
Links do not respect -webkit-user-drag: none
https://bugs.webkit.org/show_bug.cgi?id=35475
Summary
Links do not respect -webkit-user-drag: none
mitz
Reported
2010-02-27 04:13:40 PST
<
rdar://problem/7696607
> Links can be dragged even when -webkit-user-darg: none; is specified.
Attachments
Disallow dragging links with -webkit-user-drag: none;
(9.32 KB, patch)
2010-02-27 04:14 PST
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-02-27 04:14:48 PST
Created
attachment 49680
[details]
Disallow dragging links with -webkit-user-drag: none; This also fixes <img style="-webkit-user-drag: none;">.
Maciej Stachowiak
Comment 2
2010-02-27 04:21:18 PST
Comment on
attachment 49680
[details]
Disallow dragging links with -webkit-user-drag: none;
> The link drag check now chekcs that the link is not undraggable.
Please don't fail to avoid double negatives. (Though I see this does literally match what the corresponding line of code says.) r=me
mitz
Comment 3
2010-02-27 04:43:28 PST
Fixed in <
https://bugs.webkit.org/show_bug.cgi?id=35475
>.
mitz
Comment 4
2010-02-27 04:44:12 PST
Err… fixed in <
http://trac.webkit.org/projects/webkit/changeset/55353
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug