<rdar://problem/7696607> Links do not respect -webkit-user-drag: none https://bugs.webkit.org/show_bug.cgi?id=35475

Reviewed by Maciej Stachowiak.

WebCore:

Test: fast/css/user-drag-none.html

* page/DragController.cpp:
(WebCore::DragController::mayStartDragAtEventLocation): Added a node
parameter. The image drag check is done against the node, rather than
than against the hit test result. This prevents a non-draggable image
with an auto-draggable ancestor from being dragged alone. The link drag
check now ignores links that are -webkit-user-drag: none.
* page/DragController.h:
* page/EventHandler.cpp:
(WebCore::EventHandler::shouldDragAutoNode): Pass the current node
to mayStartDragAtEventLocation().

LayoutTests:

* fast/css/user-drag-none-expected.txt: Added.
* fast/css/user-drag-none.html: Added.



Canonical link: https://commits.webkit.org/46654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55353 268f45cc-cd09-0410-ab3c-d52691b4dbfc